# jit.freenect2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-info.json
docs/: jit.freenect2.maxref.xml
help/: jit.freenect2.maxhelp
source/: jit.freenect2.cpp  max.jit.freenect2.c
source/jit.freenect2/: CMakeLists.txt  jit.freenect2.cpp  kinect_wrapper.cpp  kinect_wrapper.h  max.jit.freenect2.c  max.jit.freenect2.cpp
